fixed image wrapping in bio page

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -129,24 +129,27 @@ body {
 .about-wrapper {
     margin-top: 6%;
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: top;
+    width: 100%;
 }
 
 h3 {
-    font-size: 2vw;
+    margin-top:0;
+    font-size: 40px;
 }
 
 .about-text {
-    font-size: 1vw;
     flex: 1;
+    font-size: 1.3em;
+    margin-right:2vw;
 }
 
 .about-photo {
-    margin-left: 8%;
-    max-width: 600px;
-    width: 300px;
-    height: auto;
-    flex: 1
+    width:500px;
+    min-width:350px;
+    max-width:40vw;
+    flex: 1;
 }
 
 /*Gallery Grid*/
